Revert "Martyav additional section heading fixes"

--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-certificates.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-certificates.adoc
@@ -49,7 +49,7 @@ For users who didn't rotate their webhook certificates, and they have expired af
 ====
 
 
-== Certificate Rotation
+=== Certificate Rotation
 
 Rancher launched Kubernetes clusters have the ability to rotate the auto-generated certificates through the UI.
 
@@ -62,7 +62,7 @@ Rancher launched Kubernetes clusters have the ability to rotate the auto-generat
 
 *Results:* The selected certificates will be rotated and the related services will be restarted to start using the new certificate.
 
-== Additional Notes
+=== Additional Notes
 
 [tabs]
 ======
