--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-encryption-key.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/rotate-encryption-key.adoc
@@ -1,7 +1,7 @@
 = Encryption Key Rotation
 :experimental:
 
-== RKE1 Encryption Key Rotation
+=== RKE1 Encryption Key Rotation
 
 . Enable encryption key rotation with either of the following two options:
  ** Select the `Enabled` radio button in the Rancher UI under menu:Cluster Options[Advanced Options > Secrets Encryption]:
@@ -27,7 +27,7 @@ image:rke1-enable-secrets-encryption.png[Enable Encryption Key Rotation]
 +
 image:rke1-encryption-key.png[Encryption Key Rotation]
 
-== RKE2 Encryption Key Rotation
+=== RKE2 Encryption Key Rotation
 
 _*New in v2.6.7*_
 
