--- a/versions/latest/modules/en/pages/cluster-deployment/custom-clusters/windows/network-requirements-for-host-gateway.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/custom-clusters/windows/network-requirements-for-host-gateway.adoc
@@ -2,7 +2,7 @@
 
 This section describes how to configure custom Windows clusters that are using _Host Gateway (L2bridge)_ mode.
 
-== Disabling Private IP Address Checks
+=== Disabling Private IP Address Checks
 
 If you are using _Host Gateway (L2bridge)_ mode and hosting your nodes on any of the cloud services listed below, you must disable the private IP address checks for both your Linux or Windows hosts on startup. To disable this check for each node, follow the directions provided by each service below.
 
@@ -19,7 +19,7 @@ If you are using _Host Gateway (L2bridge)_ mode and hosting your nodes on any of
 | https://docs.microsoft.com/en-us/azure/virtual-network/virtual-network-network-interface#enable-or-disable-ip-forwarding[Enable or Disable IP Forwarding]
 |===
 
-== Cloud-hosted VM Routes Configuration
+=== Cloud-hosted VM Routes Configuration
 
 If you are using the https://github.com/coreos/flannel/blob/master/Documentation/backends.md#host-gw[*Host Gateway (L2bridge)*] backend of Flannel, all containers on the same node belong to a private subnet, and traffic routes from a subnet on one node to a subnet on another node through the host network.
 
