--- a/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/amazon.adoc
@@ -25,7 +25,7 @@ To set up the Amazon cloud provider,
 . <<_1_create_an_iam_role_and_attach_to_the_instances,Create an IAM role and attach to the instances>>
 . <<_2_configure_the_clusterid,Configure the ClusterID>>
 
-== 1. Create an IAM Role and attach to the instances
+=== 1. Create an IAM Role and attach to the instances
 
 All nodes added to the cluster must be able to interact with EC2 so that they can create and remove resources. You can enable this interaction by using an IAM role attached to the instance. See https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/iam-roles-for-amazon-ec2.html#create-iam-role[Amazon documentation: Creating an IAM Role] how to create an IAM role. There are two example policies:
 
@@ -135,7 +135,7 @@ IAM policy for nodes with the `etcd` or `worker` role:
 }
 ----
 
-== 2. Configure the ClusterID
+=== 2. Configure the ClusterID
 
 The following resources need to tagged with a `ClusterID`:
 
@@ -171,11 +171,11 @@ Do not tag a resource with multiple owned or shared tags.
 ====
 
 
-== Using Amazon Elastic Container Registry (ECR)
+=== Using Amazon Elastic Container Registry (ECR)
 
 The kubelet component has the ability to automatically obtain ECR credentials, when the IAM profile mentioned in <<_1_create_an_iam_role_and_attach_to_the_instances,Create an IAM Role and attach to the instances>> is attached to the instance(s). When using a Kubernetes version older than v1.15.0, the Amazon cloud provider needs be configured in the cluster. Starting with Kubernetes version v1.15.0, the kubelet can obtain ECR credentials without having the Amazon cloud provider configured in the cluster.
 
-== Using the Out-of-Tree AWS Cloud Provider
+=== Using the Out-of-Tree AWS Cloud Provider
 
 [tabs,sync-group-id=k8s-distro]
 ======
@@ -618,7 +618,7 @@ kubectl rollout status daemonset -n kube-system aws-cloud-controller-manager
 --
 ======
 
-=== Helm Chart Installation from UI 
+### Helm Chart Installation from UI 
 
 [tabs,sync-group-id=k8s-distro]
 ======
