--- a/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/high-availability-installs.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/best-practices/high-availability-installs.adoc
@@ -10,7 +10,7 @@ The Rancher server data is stored on etcd. This etcd database also runs on all t
 
 For information on how Rancher works, regardless of the installation method, refer to the xref:about-rancher/architecture/architecture.adoc[architecture section.]
 
-== Recommended Architecture
+=== Recommended Architecture
 
 * DNS for Rancher should resolve to a layer 4 load balancer
 * The Load Balancer should forward port TCP/80 and TCP/443 to all 3 nodes in the Kubernetes cluster.
