--- a/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/aws/install-adapter.adoc
@@ -2,7 +2,7 @@
 
 IMPORTANT: If you are attempting to re-install the adapter, you may experience errant out-of-compliance messages for up to an hour.
 
-== Rancher vs. Adapter Compatibility Matrix
+=== Rancher vs. Adapter Compatibility Matrix
 
 [NOTE]
 .Important:
@@ -26,7 +26,7 @@ In order to deploy and run the adapter successfully, you need to ensure its vers
 | v104.0.0+up4.0.0
 |===
 
-== 1. Gain Access to the Local Cluster
+=== 1. Gain Access to the Local Cluster
 
 NOTE: Only admin users should have access to the local cluster. Because the CSP adapter must be installed in the local cluster, this installation must be carried out by an admin user.
 
@@ -37,7 +37,7 @@ First, click on the local cluster and download a kubeconfig token. You can then 
 export KUBECONFIG=$TOKEN_PATH
 ----
 
-== 2. Create the Adapter Namespace
+=== 2. Create the Adapter Namespace
 
 Create the namespace that the adapter will be installed in.
 
@@ -46,7 +46,7 @@ Create the namespace that the adapter will be installed in.
 kubectl create ns cattle-csp-adapter-system
 ----
 
-== 3. Create Certificate Secrets
+=== 3. Create Certificate Secrets
 
 The adapter requires access to the root CA that Rancher is using to communicate with the Rancher server. You can read more about which certificate options Rancher supports in the xref:installation-and-upgrade/references/helm-chart-options.adoc[chart options page].
 
@@ -70,7 +70,7 @@ kubectl -n cattle-csp-adapter-system create secret generic tls-ca-additional --f
 
 IMPORTANT: Do not change the names of the file or of the created secret. Making changes to these values may result in errors when the adapter runs.
 
-== 4. Install the Chart
+=== 4. Install the Chart
 
 First, add the `rancher/charts` repo using the following command:
 
@@ -149,7 +149,7 @@ You can then install the adapter with the following command:
 --
 ======
 
-== 5. Managing Certificate Updates
+=== 5. Managing Certificate Updates
 
 If you had to create a secret storing a custom cert in <<_3_create_certificate_secrets,Step 3>>, you will need to update this secret over time as the certificate is rotated.
 
