--- a/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-rke2-kubernetes-cluster.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-rke2-kubernetes-cluster.adoc
@@ -18,13 +18,13 @@ To install the Rancher management server on a high-availability RKE2 cluster, we
 * *A load balancer* to direct traffic to the nodes.
 * *A DNS record* to map a URL to the load balancer. This will become the Rancher server URL, and downstream Kubernetes clusters will need to reach it.
 
-== 1. Set up Linux Nodes
+=== 1. Set up Linux Nodes
 
 Make sure that your nodes fulfill the general installation requirements for xref:installation-and-upgrade/requirements/requirements.adoc[OS, container runtime, hardware, and networking.]
 
 For an example of one way to set up Linux nodes, refer to this xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[tutorial] for setting up nodes as instances in Amazon EC2.
 
-== 2. Set up the Load Balancer
+=== 2. Set up the Load Balancer
 
 You will also need to set up a load balancer to direct traffic to the Rancher replica on all nodes. That will prevent an outage of any single node from taking down communications to the Rancher management server.
 
@@ -48,7 +48,7 @@ Do not use this load balancer (i.e, the `local` cluster Ingress) to load balance
 ====
 
 
-== 3. Set up the DNS Record
+=== 3. Set up the DNS Record
 
 Once you have set up your load balancer, you will need to create a DNS record to send traffic to this load balancer.
 
