--- a/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/set-up-infrastructure.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/set-up-infrastructure.adoc
@@ -10,13 +10,13 @@ To install the Rancher management server on a high-availability RKE cluster, we 
 
 These nodes must be in the same region/data center. You may place these servers in separate availability zones.
 
-== Why Three Nodes?
+=== Why three nodes?
 
 In an RKE cluster, Rancher server data is stored on etcd. This etcd database runs on all three nodes.
 
 The etcd database requires an odd number of nodes so that it can always elect a leader with a majority of the etcd cluster. If the etcd database cannot elect a leader, etcd can suffer from https://www.quora.com/What-is-split-brain-in-distributed-systems[split brain], requiring the cluster to be restored from backup. If one of the three etcd nodes fails, the two remaining nodes can elect a leader because they have the majority of the total number of etcd nodes.
 
-== 1. Set up Linux Nodes
+=== 1. Set up Linux Nodes
 
 These hosts will connect to the internet through an HTTP proxy.
 
@@ -24,7 +24,7 @@ Make sure that your nodes fulfill the general installation requirements for xref
 
 For an example of one way to set up Linux nodes, refer to this xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[tutorial] for setting up nodes as instances in Amazon EC2.
 
-== 2. Set up the Load Balancer
+=== 2. Set up the Load Balancer
 
 You will also need to set up a load balancer to direct traffic to the Rancher replica on both nodes. That will prevent an outage of any single node from taking down communications to the Rancher management server.
 
@@ -49,7 +49,7 @@ Do not use this load balancer (i.e, the `local` cluster Ingress) to load balance
 ====
 
 
-== 3. Set up the DNS Record
+=== 3. Set up the DNS Record
 
 Once you have set up your load balancer, you will need to create a DNS record to send traffic to this load balancer.
 
@@ -59,4 +59,4 @@ You will need to specify this hostname in a later step when you install Rancher,
 
 For a how-to guide for setting up a DNS record to route domain traffic to an Amazon ELB load balancer, refer to the https://docs.aws.amazon.com/Route53/latest/DeveloperGuide/routing-to-elb-load-balancer[official AWS documentation.]
 
-== xref:installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc[Next: Set up a Kubernetes cluster]
+=== xref:installation-and-upgrade/other-installation-methods/http-proxy/install-kubernetes.adoc[Next: Set up a Kubernetes cluster]
