--- a/versions/latest/modules/en/pages/observability/istio/guides/use-istio-sidecar.adoc
+++ b/versions/latest/modules/en/pages/observability/istio/guides/use-istio-sidecar.adoc
@@ -20,7 +20,7 @@ To inject the Istio sidecar on an existing workload in the namespace,
 
 Wait a few minutes for the workload to upgrade to have the istio sidecar. Click it and go to the Containers section. You should be able to see `istio-proxy` alongside your original workload. This means the Istio sidecar is enabled for the workload. Istio is doing all the wiring for the sidecar envoy. Now Istio can do all the features automatically if you enable them in the yaml.
 
-== Add Deployments and Services
+=== Add Deployments and Services
 
 There are a few ways to add new *Deployments* in your namespace:
 
@@ -47,7 +47,7 @@ You can also create deployments and services using the kubectl *shell*
 . Run `kubectl create -f <name of service/deployment file>.yaml` if your file is stored locally in the cluster
 . Or run `cat<< EOF | kubectl apply -f -`, paste the file contents into the terminal, then run `EOF` to complete the command.
 
-== Example Deployments and Services
+=== Example Deployments and Services
 
 Next we add the Kubernetes resources for the sample deployments and services for the BookInfo app in Istio's documentation.
 
@@ -88,7 +88,7 @@ This is the main page of the app, which will be visible from a web browser. The 
 * A ServiceAccount for `bookinfo-productpage`
 * A `productpage-v1` Deployment
 
-== Resource YAML
+=== Resource YAML
 
 [,yaml]
 ----
@@ -358,4 +358,4 @@ spec:
 ---
 ----
 
-== xref:observability/istio/guides/set-up-istio-gateway.adoc[Next: Set up the Istio Gateway]
+=== xref:observability/istio/guides/set-up-istio-gateway.adoc[Next: Set up the Istio Gateway]
