--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/configuration/advanced/prometheusrules.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/configuration/advanced/prometheusrules.adoc
@@ -10,7 +10,7 @@ This section assumes familiarity with how monitoring components work together. F
 ====
 
 
-== Creating PrometheusRules in the Rancher UI
+=== Creating PrometheusRules in the Rancher UI
 
 [NOTE]
 .Prerequisite:
@@ -30,7 +30,7 @@ To create rule groups in the Rancher UI,
 
 *Result:* Alerts can be configured to send notifications to the receiver(s).
 
-== About the PrometheusRule Custom Resource
+=== About the PrometheusRule Custom Resource
 
 When you define a Rule (which is declared within a RuleGroup in a PrometheusRule resource), the https://github.com/prometheus-operator/prometheus-operator/blob/master/Documentation/api.md#rule[spec of the Rule itself] contains labels that are used by Alertmanager to figure out which Route should receive this Alert. For example, an Alert with the label `team: front-end` will be sent to all Routes that match on that label.
 
