--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/configuration/debug-high-memory-usage.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/configuration/debug-high-memory-usage.adoc
@@ -10,7 +10,7 @@ Prometheus is optimized to store data that is index-based on series. It is desig
 
 Inversely, Prometheus is not optimized to accommodate a rapidly changing number of time series. For that reason, large bursts of memory usage can occur when monitoring is installed on clusters where many resources are being created and destroyed, especially on multi-tenant clusters.
 
-== Reducing Memory Bursts
+=== Reducing Memory Bursts
 
 To reduce memory consumption, Prometheus can be configured to store fewer time series, by scraping fewer metrics or by attaching fewer labels to the time series. To see which series use the most memory, you can check the TSDB (time series database) status page in the Prometheus UI.
 
