--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/customizing-dashboard/customize-grafana-dashboard.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/customizing-dashboard/customize-grafana-dashboard.adoc
@@ -3,13 +3,13 @@
 
 In this section, you'll learn how to customize the Grafana dashboard to show metrics that apply to a certain container.
 
-== Prerequisites
+=== Prerequisites
 
 Before you can customize a Grafana dashboard, the `rancher-monitoring` application must be installed.
 
 To see the links to the external monitoring UIs, including Grafana dashboards, you will need at least a xref:observability/monitoring-and-dashboards/rbac-for-monitoring.adoc#_users_with_rancher_based_permissions[project-member role.]
 
-== Signing in to Grafana
+=== Signing in to Grafana
 
 . In the Rancher UI, go to the cluster that has the dashboard you want to customize.
 . In the left navigation menu, click *Monitoring.*
@@ -17,7 +17,7 @@ To see the links to the external monitoring UIs, including Grafana dashboards, y
 . Go to the log in icon in the lower left corner and click *Sign In.*
 . Log in to Grafana. The default Admin username and password for the Grafana instance is `admin/prom-operator`. (Regardless of who has the password, cluster administrator permission in Rancher is still required access the Grafana instance.) Alternative credentials can also be supplied on deploying or upgrading the chart.
 
-== Getting the PromQL Query Powering a Grafana Panel
+=== Getting the PromQL Query Powering a Grafana Panel
 
 For any panel, you can click the title and click *Explore* to get the PromQL queries powering the graphic.
 
