--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/set-up-monitoring-for-workloads.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/set-up-monitoring-for-workloads.adoc
@@ -10,13 +10,13 @@ Grafana shows the data in aggregate, but you can see the data for the individual
 
 To set up custom metrics for your workload, you will need to set up an exporter and create a new ServiceMonitor custom resource to configure Prometheus to scrape metrics from your exporter.
 
-== Display CPU and Memory Metrics for a Workload
+=== Display CPU and Memory Metrics for a Workload
 
 By default, the monitoring application already scrapes CPU and memory.
 
 To get some fine-grained detail for a particular workload, you can customize a Grafana dashboard to display the metrics for a particular workload.
 
-== Setting up Metrics Beyond CPU and Memory
+=== Setting up Metrics Beyond CPU and Memory
 
 For custom metrics, you will need to expose the metrics on your application in a format supported by Prometheus.
 
