--- a/versions/latest/modules/en/pages/rancher-admin/experimental-features/unsupported-storage-drivers.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/experimental-features/unsupported-storage-drivers.adoc
@@ -12,7 +12,7 @@ To enable or disable this feature, refer to the instructions on xref:rancher-adm
 | This feature enables types for storage providers and provisioners that are not enabled by default.
 |===
 
-== Types for Persistent Volume Plugins that are Enabled by Default
+=== Types for Persistent Volume Plugins that are Enabled by Default
 
 Below is a list of storage types for persistent volume plugins that are enabled by default. When enabling this feature flag, any persistent volume plugins that are not on this list are considered experimental and unsupported:
 
@@ -47,7 +47,7 @@ Below is a list of storage types for persistent volume plugins that are enabled 
 | `host-path`
 |===
 
-== Types for StorageClass that are Enabled by Default
+=== Types for StorageClass that are Enabled by Default
 
 Below is a list of storage types for a StorageClass that are enabled by default. When enabling this feature flag, any persistent volume plugins that are not on this list are considered experimental and unsupported:
 
