--- a/versions/latest/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/provisioning-drivers.adoc
@@ -2,7 +2,7 @@
 
 Drivers in Rancher allow you to manage which providers can be used to deploy xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters] or xref:cluster-deployment/infra-providers/infra-providers.adoc[nodes in an infrastructure provider] to allow Rancher to deploy and manage Kubernetes.
 
-== Rancher Drivers
+=== Rancher Drivers
 
 With Rancher drivers, you can enable/disable existing built-in drivers that are packaged in Rancher. Alternatively, you can add your own driver if Rancher has not yet implemented it.
 
@@ -11,7 +11,7 @@ There are two types of drivers within Rancher:
 * <<_cluster_drivers,Cluster Drivers>>
 * <<_node_drivers,Node Drivers>>
 
-== Cluster Drivers
+=== Cluster Drivers
 
 Cluster drivers are used to provision xref:cluster-deployment/hosted-kubernetes/hosted-kubernetes.adoc[hosted Kubernetes clusters], such as GKE, EKS, AKS, etc.. The availability of which cluster driver to display when creating a cluster is defined based on the cluster driver's status. Only `active` cluster drivers will be displayed as an option for creating clusters for hosted Kubernetes clusters. By default, Rancher is packaged with several existing cluster drivers, but you can also create custom cluster drivers to add to Rancher.
 
@@ -27,7 +27,7 @@ There are several other hosted Kubernetes cloud providers that are disabled by d
 * xref:[Huawei CCE]
 * xref:[Tencent]
 
-== Node Drivers
+=== Node Drivers
 
 Node drivers are used to provision hosts, which Rancher uses to launch and manage Kubernetes clusters. A node driver is the same as a https://docs.docker.com/machine/drivers/[Docker Machine driver]. The availability of which node driver to display when creating node templates is defined based on the node driver's status. Only `active` node drivers will be displayed as an option for creating node templates. By default, Rancher is packaged with many existing Docker Machine drivers, but you can also create custom node drivers to add to Rancher.
 
