--- a/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
@@ -76,4 +76,4 @@ https://<AD_SERVER>/federationmetadata/2007-06/federationmetadata.xml
 
 *Result:* You've added Rancher as a relying trust party. Now you can configure Rancher to leverage AD.
 
-== xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc[Next: Configuring Rancher for Microsoft AD FS]
+=== xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc[Next: Configuring Rancher for Microsoft AD FS]
