--- a/versions/latest/modules/en/pages/security/encrypting-http.adoc
+++ b/versions/latest/modules/en/pages/security/encrypting-http.adoc
@@ -12,7 +12,7 @@ You must have a TLS private key and certificate available to upload.
 ====
 
 
-== 1. Create a Secret
+=== 1. Create a Secret
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . Go to the cluster where you want to deploy your ingress and click menu:More Resources[Core > Secrets].
@@ -23,7 +23,7 @@ You must have a TLS private key and certificate available to upload.
 . In the *Certificate* field, either copy and paste your certificate into the text box (include the header and footer), or click *Read from a file* to browse to the certificate on your file system. If possible, we recommend using *Read from a file* to reduce likelihood of error. Note: Certificate files end with an extension of `.crt`.
 . Click *Create*.
 
-== 2. Add the Secret to an Ingress
+=== 2. Add the Secret to an Ingress
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . Go to the cluster where you want to deploy your ingress and click menu:Service Discovery[Ingresses].
