--- a/versions/latest/modules/en/pages/cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc
@@ -3,16 +3,16 @@
 
 You can build any complex containerized application in Kubernetes using two basic constructs: pods and workloads. Once you build an application, you can expose it for access either within the same cluster or on the Internet using a third construct: services.
 
-== Pods
+=== Pods
 
 https://kubernetes.io/docs/concepts/workloads/pods/pod-overview/[_Pods_] are one or more containers that share network namespaces and storage volumes. Most pods have only one container. Therefore when we discuss _pods_, the term is often synonymous with _containers_. You scale pods the same way you scale containers--by having multiple instances of the same pod that implement a service. Usually pods get scaled and managed by the workload.
 
-== Workloads
+=== Workloads
 
 _Workloads_ are objects that set deployment rules for pods. Based on these rules, Kubernetes performs the deployment and updates the workload with the current state of the application.
 Workloads let you define the rules for application scheduling, scaling, and upgrade.
 
-=== Workload Types
+==== Workload Types
 
 Kubernetes divides workloads into different types. The most popular types supported by Kubernetes are:
 
@@ -36,7 +36,7 @@ _Jobs_ launch one or more pods and ensure that a specified number of them succes
 +
 _CronJobs_ are similar to jobs. CronJobs, however, runs to completion on a cron-based schedule.
 
-== Services
+=== Services
 
 In many use cases, a workload has to be either:
 
@@ -45,7 +45,7 @@ In many use cases, a workload has to be either:
 
 You can achieve these goals by creating a _Service_. Services are mapped to the underlying workload's pods using a https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/#service-and-replicationcontroller[selector/label approach (view the code samples)]. Rancher UI simplifies this mapping process by automatically creating a service along with the workload, using the service port and type that you select.
 
-=== Service Types
+==== Service Types
 
 There are several types of services available in Rancher. The descriptions below are sourced from the https://kubernetes.io/docs/concepts/services-networking/service/#publishing-services-service-types[Kubernetes Documentation].
 
@@ -76,5 +76,7 @@ This section of the documentation contains instructions for deploying workloads 
 * xref:cluster-admin/kubernetes-resources/workloads-and-pods/roll-back-workloads.adoc[Rollback Workloads]
 
 == Related Links
+
+=== External Links
 
 * https://kubernetes.io/docs/concepts/services-networking/service/[Services]
