--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
@@ -5,7 +5,7 @@ When deploying an application that needs to retain data, you'll need to create p
 
 The documents in this section assume that you understand the Kubernetes concepts of persistent volumes, persistent volume claims, and storage classes. For more information, refer to the section on xref:cluster-admin/manage-clusters/persistent-storage/about-persistent-storage.adoc[how storage works.]
 
-== Prerequisites
+=== Prerequisites
 
 To set up persistent storage, the `Manage Volumes` xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_project_role_reference[role] is required.
 
@@ -15,7 +15,7 @@ For provisioning new storage with Rancher, the cloud provider must be enabled. F
 
 For attaching existing persistent storage to a cluster, the cloud provider does not need to be enabled.
 
-== Setting up Existing Storage
+=== Setting up Existing Storage
 
 The overall workflow for setting up existing storage is as follows:
 
@@ -26,7 +26,7 @@ The overall workflow for setting up existing storage is as follows:
 
 For details and prerequisites, refer to xref:cluster-admin/manage-clusters/persistent-storage/set-up-existing-storage.adoc[this page.]
 
-== Dynamically Provisioning New Storage in Rancher
+=== Dynamically Provisioning New Storage in Rancher
 
 The overall workflow for provisioning new storage is as follows:
 
@@ -36,7 +36,7 @@ The overall workflow for provisioning new storage is as follows:
 
 For details and prerequisites, refer to xref:cluster-admin/manage-clusters/persistent-storage/dynamically-provision-new-storage.adoc[this page.]
 
-== Longhorn Storage
+=== Longhorn Storage
 
 https://longhorn.io/[Longhorn] is a lightweight, reliable and easy-to-use distributed block storage system for Kubernetes.
 
@@ -46,28 +46,28 @@ If you have a pool of block storage, Longhorn can help you provide persistent st
 
 Rancher v2.5 simplified the process of installing Longhorn on a Rancher-managed cluster. For more information, see xref:integrations/longhorn/longhorn.adoc[Cloud Native Storage with Longhorn].
 
-== Provisioning Storage Examples
+=== Provisioning Storage Examples
 
 We provide examples of how to provision storage with xref:cluster-admin/manage-clusters/persistent-storage/examples/nfs-storage.adoc[NFS,] xref:cluster-admin/manage-clusters/persistent-storage/examples/vsphere-storage.adoc[vSphere,] and xref:cluster-admin/manage-clusters/persistent-storage/examples/persistent-storage-in-amazon-ebs.adoc[Amazon's EBS.]
 
-== GlusterFS Volumes
+=== GlusterFS Volumes
 
 In clusters that store data on GlusterFS volumes, you may experience an issue where pods fail to mount volumes after restarting the `kubelet`. For details on preventing this from happening, refer to xref:cluster-admin/manage-clusters/persistent-storage/about-glusterfs-volumes.adoc[this page.]
 
-== iSCSI Volumes
+=== iSCSI Volumes
 
 In xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[Rancher Launched Kubernetes clusters] that store data on iSCSI volumes, you may experience an issue where kubelets fail to automatically connect with iSCSI volumes. For details on resolving this issue, refer to xref:cluster-admin/manage-clusters/persistent-storage/install-iscsi-volumes.adoc[this page.]
 
-== hostPath Volumes
+=== hostPath Volumes
 
 Before you create a hostPath volume, you need to set up an https://rancher.com/docs/rke/latest/en/config-options/services/services-extras/#extra-binds/[extra_bind] in your cluster configuration. This will mount the path as a volume in your kubelets, which can then be used for hostPath volumes in your workloads.
 
-== Migrating VMware vSphere Cloud Provider from In-tree to Out-of-tree
+=== Migrating VMware vSphere Cloud Provider from In-tree to Out-of-tree
 
 Kubernetes is moving away from maintaining cloud providers in-tree. vSphere has an out-of-tree cloud provider that can be used by installing the vSphere cloud provider and cloud storage plugins.
 
 For instructions on how to migrate from the in-tree vSphere cloud provider to out-of-tree, and manage the existing VMs post migration, refer to xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[this page.]
 
-== Related Links
+=== Related Links
 
 * https://kubernetes.io/docs/concepts/storage/[Kubernetes Documentation: Storage]
