--- a/versions/latest/modules/en/pages/cluster-admin/project-admin/project-administration.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/project-admin/project-administration.adoc
@@ -20,7 +20,7 @@ You can use projects to perform actions like:
 * xref:observability/rancher-project-tools.adoc[Configure tools]
 * xref:cluster-admin/project-admin/pod-security-policies.adoc[Configure pod security policies]
 
-== Authorization
+=== Authorization
 
 Non-administrative users are only authorized for project access after an xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[administrator], xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_cluster_roles[cluster owner or member], or xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_project_roles[project owner] adds them to the project's *Members* tab.
 
