--- a/versions/latest/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/hosted-kubernetes/sync-clusters.adoc
@@ -8,7 +8,7 @@ You may accidentally overwrite the state from one source if you simultaneously p
 ====
 
 
-== How It Works
+=== How it works
 
 There are two fields on the Rancher Cluster object that must be understood to understand how syncing works:
 
