--- a/versions/latest/modules/en/pages/cluster-deployment/production-checklist/production-checklist.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/production-checklist/production-checklist.adoc
@@ -8,15 +8,15 @@ This is a shortlist of best practices that we strongly recommend for all product
 
 For a full list of all the best practices that we recommend, refer to the xref:installation-and-upgrade/best-practices/best-practices.adoc[best practices section.]
 
-== Node Requirements
+=== Node Requirements
 
 * Make sure your nodes fulfill all of the xref:cluster-deployment/node-requirements.adoc[node requirements,] including the port requirements.
 
-== Back up etcd
+=== Back up etcd
 
 * Enable etcd snapshots. Verify that snapshots are being created, and run a disaster recovery scenario to verify the snapshots are valid. etcd is the location where the state of your cluster is stored, and losing etcd data means losing your cluster. Make sure you configure recurring snapshots of etcd for your cluster(s), and make sure the snapshots are stored externally (off the node) as well.
 
-== Cluster Architecture
+=== Cluster Architecture
 
 * Nodes should have one of the following role configurations:
  ** `etcd`
@@ -32,16 +32,16 @@ For more information on what each role is used for, refer to the xref:cluster-de
 For more information about the
 number of nodes for each Kubernetes role, refer to the section on xref:about-rancher/architecture/recommendations.adoc[recommended architecture.]
 
-== Logging and Monitoring
+=== Logging and Monitoring
 
 * Configure alerts/notifiers for Kubernetes components (System Service).
 * Configure logging for cluster analysis and post-mortems.
 
-== Reliability
+=== Reliability
 
 * Perform load tests on your cluster to verify that its hardware can support your workloads.
 
-== Networking
+=== Networking
 
 * Minimize network latency. Rancher recommends minimizing latency between the etcd nodes. The default setting for `heartbeat-interval` is `500`, and the default setting for `election-timeout` is `5000`. These https://etcd.io/docs/v3.5/tuning/[settings for etcd tuning] allow etcd to run in most networks (except really high latency networks).
 * Cluster nodes should be located within a single region. Most cloud providers provide multiple availability zones within a region, which can be used to create higher availability for your cluster. Using multiple availability zones is fine for nodes with any role. If you are using xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc[Kubernetes Cloud Provider] resources, consult the documentation for any restrictions (i.e. zone storage restrictions).
