--- a/versions/latest/modules/en/pages/cluster-deployment/production-checklist/tips-to-set-up-containers.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/production-checklist/tips-to-set-up-containers.adoc
@@ -6,7 +6,7 @@ Below are a few tips for setting up your containers.
 
 For a more detailed discussion of security for containers, you can also refer to Rancher's https://rancher.com/complete-guide-container-security[Guide to Container Security.]
 
-== Use a Common Container OS
+=== Use a Common Container OS
 
 When possible, you should try to standardize on a common container base OS.
 
@@ -14,7 +14,7 @@ Smaller distributions such as Alpine and BusyBox reduce container image size and
 
 Popular distributions such as Ubuntu, Fedora, and CentOS are more field-tested and offer more functionality.
 
-== Start with a FROM scratch container
+=== Start with a FROM scratch container
 
 If your microservice is a standalone static binary, you should use a FROM scratch container.
 
@@ -22,11 +22,11 @@ The FROM scratch container is an https://hub.docker.com/_/scratch[official Docke
 
 This will have the smallest attack surface and smallest image size.
 
-== Run Container Processes as Unprivileged
+=== Run Container Processes as Unprivileged
 
 When possible, use a non-privileged user when running processes within your container. While container runtimes provide isolation, vulnerabilities and attacks are still possible. Inadvertent or accidental host mounts can also be impacted if the container is running as root. For details on configuring a security context for a pod or container, refer to the https://kubernetes.io/docs/tasks/configure-pod-container/security-context/[Kubernetes docs].
 
-== Define Resource Limits
+=== Define Resource Limits
 
 Apply CPU and memory limits to your pods. This can help manage the resources on your worker nodes and avoid a malfunctioning microservice from impacting other microservices.
 
@@ -36,7 +36,7 @@ When setting resource quotas, if you set anything related to CPU or Memory (i.e.
 
 The Kubernetes docs have more information on how resource limits can be set at the https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#resource-requests-and-limits-of-pod-and-container[container level] and the namespace level.
 
-== Define Resource Requirements
+=== Define Resource Requirements
 
 You should apply CPU and memory requirements to your pods. This is crucial for informing the scheduler which type of compute node your pod needs to be placed on, and ensuring it does not over-provision that node. In Kubernetes, you can set a resource requirement by defining `resources.requests` in the resource requests field in a pod's container spec. For details, refer to the https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/#resource-requests-and-limits-of-pod-and-container[Kubernetes docs].
 
@@ -49,7 +49,7 @@ If you set a resource limit for the namespace that the pod is deployed in, and t
 
 It is recommended to define resource requirements on the container level because otherwise, the scheduler makes assumptions that will likely not be helpful to your application when the cluster experiences load.
 
-== Liveness and Readiness Probes
+=== Liveness and Readiness Probes
 
 Set up liveness and readiness probes for your container. Unless your container completely crashes, Kubernetes will not know it's unhealthy unless you create an endpoint or mechanism that can report container status. Alternatively, make sure your container halts and crashes if unhealthy.
 
