--- a/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
@@ -15,23 +15,23 @@ The following cloud providers can be enabled:
 * GCE (Google Compute Engine)
 * vSphere
 
-== Setting up the Amazon Cloud Provider
+=== Setting up the Amazon Cloud Provider
 
 For details on enabling the Amazon cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/amazon.adoc[this page.]
 
-== Setting up the Azure Cloud Provider
+=== Setting up the Azure Cloud Provider
 
 For details on enabling the Azure cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/azure.adoc[this page.]
 
-== Setting up the GCE Cloud Provider
+=== Setting up the GCE Cloud Provider
 
 For details on enabling the Google Compute Engine cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/google-compute-engine.adoc[this page.]
 
-== Setting up the VMware vSphere Cloud Provider
+=== Setting up the VMware vSphere Cloud Provider
 
 For details on enabling the vSphere cloud provider, refer to xref:cluster-deployment/set-up-cloud-providers/configure-in-tree-vsphere.adoc[in-tree vSphere config] and xref:cluster-deployment/set-up-cloud-providers/configure-out-of-tree-vsphere.adoc[out-of-tree vSphere config].
 
-== Setting up a Custom Cloud Provider
+=== Setting up a Custom Cloud Provider
 
 The `Custom` cloud provider is available if you want to configure any Kubernetes cloud provider.
 
