--- a/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-k3s-kubernetes-cluster.adoc
@@ -21,13 +21,13 @@ To install the Rancher management server on a high-availability K3s cluster, we 
 * *A load balancer* to direct traffic to the two nodes.
 * *A DNS record* to map a URL to the load balancer. This will become the Rancher server URL, and downstream Kubernetes clusters will need to reach it.
 
-== 1. Set up Linux Nodes
+=== 1. Set up Linux Nodes
 
 Make sure that your nodes fulfill the general installation requirements for xref:installation-and-upgrade/requirements/requirements.adoc[OS, container runtime, hardware, and networking.]
 
 For an example of one way to set up Linux nodes, refer to this xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[tutorial] for setting up nodes as instances in Amazon EC2.
 
-== 2. Set up External Datastore
+=== 2. Set up External Datastore
 
 The ability to run Kubernetes using a datastore other than etcd sets K3s apart from other Kubernetes distributions. This feature provides flexibility to Kubernetes operators. The available options allow you to select a datastore that best fits your use case.
 
@@ -39,7 +39,7 @@ For an example of one way to set up the MySQL database, refer to this xref:insta
 
 For the complete list of options that are available for configuring a K3s cluster datastore, refer to the https://rancher.com/docs/k3s/latest/en/installation/datastore/[K3s documentation.]
 
-== 3. Set up the Load Balancer
+=== 3. Set up the Load Balancer
 
 You will also need to set up a load balancer to direct traffic to the Rancher replica on both nodes. That will prevent an outage of any single node from taking down communications to the Rancher management server.
 
@@ -62,7 +62,8 @@ For a how-to guide for setting up an Amazon ELB Network Load Balancer, refer to 
 Do not use this load balancer (i.e, the `local` cluster Ingress) to load balance applications other than Rancher following installation. Sharing this Ingress with other applications may result in websocket errors to Rancher following Ingress configuration reloads for other apps. We recommend dedicating the `local` cluster to Rancher and no other applications.
 ====
 
-== 4. Set up the DNS Record
+
+=== 4. Set up the DNS Record
 
 Once you have set up your load balancer, you will need to create a DNS record to send traffic to this load balancer.
 
