--- a/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/configuration/advanced/advanced.adoc
+++ b/versions/latest/modules/en/pages/observability/monitoring-and-dashboards/configuration/advanced/advanced.adoc
@@ -1,13 +1,13 @@
 = Advanced Configuration
 
-== Alertmanager
+=== Alertmanager
 
 For information on configuring the Alertmanager custom resource, see xref:observability/monitoring-and-dashboards/configuration/advanced/alertmanager.adoc[this page.]
 
-== Prometheus
+=== Prometheus
 
 For information on configuring the Prometheus custom resource, see xref:observability/monitoring-and-dashboards/configuration/advanced/prometheus.adoc[this page.]
 
-== PrometheusRules
+=== PrometheusRules
 
 For information on configuring the Prometheus custom resource, see xref:observability/monitoring-and-dashboards/configuration/advanced/prometheusrules.adoc[this page.]
