--- a/versions/latest/modules/en/pages/rancher-admin/global-configuration/rke1-templates/apply-templates.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/global-configuration/rke1-templates/apply-templates.adoc
@@ -8,7 +8,7 @@ You can <<_converting_an_existing_cluster_to_use_an_rke_template,save the config
 
 You can't change a cluster to use a different RKE template. You can only update the cluster to a new revision of the same template.
 
-== Creating a Cluster from an RKE Template
+=== Creating a Cluster from an RKE Template
 
 To add a cluster xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[hosted by an infrastructure provider] using an RKE template, use these steps:
 
@@ -20,7 +20,7 @@ To add a cluster xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[hos
 . Optional: You can edit any settings that the RKE template owner marked as *Allow User Override* when the template was created. If there are settings that you want to change, but don't have the option to, you will need to contact the template owner to get a new revision of the template. Then you will need to edit the cluster to upgrade it to the new revision.
 . Click *Create* to launch the cluster.
 
-== Updating a Cluster Created with an RKE Template
+=== Updating a Cluster Created with an RKE Template
 
 When the template owner creates a template, each setting has a switch in the Rancher UI that indicates if users can override the setting.
 
@@ -38,7 +38,7 @@ You can't change the cluster to use a different RKE template. You can only updat
 ====
 
 
-== Converting an Existing Cluster to Use an RKE Template
+=== Converting an Existing Cluster to Use an RKE Template
 
 This section describes how to create an RKE template from an existing cluster.
 
