--- a/versions/latest/modules/en/pages/rancher-admin/global-configuration/rke1-templates/manage-templates.adoc
+++ b/versions/latest/modules/en/pages/rancher-admin/global-configuration/rke1-templates/manage-templates.adoc
@@ -9,13 +9,13 @@ Template revisions can be used in two ways: to create a new cluster, or to upgra
 
 The template owner has full control over template revisions, and can create new revisions to update the template, delete or disable revisions that should not be used to create clusters, and choose which template revision is the default.
 
-== Prerequisites
+=== Prerequisites
 
 You can create RKE templates if you have the *Create RKE Templates* permission, which can be xref:rancher-admin/global-configuration/rke1-templates/creator-permissions.adoc[given by an administrator.]
 
 You can revise, share, and delete a template if you are an owner of the template. For details on how to become an owner of a template, refer to link:access-or-share-templates.adoc#sharing-ownership-of-templates[the documentation on sharing template ownership.]
 
-== Creating a Template
+=== Creating a Template
 
 . In the upper left corner, click *☰ > Cluster Management*.
 . Click menu:RKE1 configuration[Node Templates].
@@ -26,7 +26,7 @@ You can revise, share, and delete a template if you are an owner of the template
 
 *Result:* An RKE template with one revision is configured. You can use this RKE template revision later when you xref:cluster-deployment/launch-kubernetes-with-rancher.adoc[provision a Rancher-launched cluster]. After a cluster is managed by an RKE template, it cannot be disconnected and the option to uncheck *Use an existing RKE Template and Revision* will be unavailable.
 
-== Updating a Template
+=== Updating a Template
 
 When you update an RKE template, you are creating a revision of the existing template. Clusters that were created with an older version of the template can be updated to match the new revision.
 
@@ -42,7 +42,7 @@ When new template revisions are created, clusters using an older revision of the
 
 *Result:* The template is updated. To apply it to a cluster using an older version of the template, refer to the section on <<_upgrading_a_cluster_to_use_a_new_template_revision,upgrading a cluster to use a new revision of a template.>>
 
-== Deleting a Template
+=== Deleting a Template
 
 When you no longer use an RKE template for any of your clusters, you can delete it.
 
@@ -53,7 +53,7 @@ When you no longer use an RKE template for any of your clusters, you can delete 
 
 *Result:* The template is deleted.
 
-== Creating a Revision Based on the Default Revision
+=== Creating a Revision Based on the Default Revision
 
 You can clone the default template revision and quickly update its settings rather than creating a new revision from scratch. Cloning templates saves you the hassle of re-entering the access keys and other parameters needed for cluster creation.
 
@@ -64,7 +64,7 @@ You can clone the default template revision and quickly update its settings rath
 
 *Result:* The RKE template revision is cloned and configured.
 
-== Creating a Revision Based on a Cloned Revision
+=== Creating a Revision Based on a Cloned Revision
 
 When creating new RKE template revisions from your user settings, you can clone an existing revision and quickly update its settings rather than creating a new one from scratch. Cloning template revisions saves you the hassle of re-entering the cluster parameters.
 
@@ -75,7 +75,7 @@ When creating new RKE template revisions from your user settings, you can clone 
 
 *Result:* The RKE template revision is cloned and configured. You can use the RKE template revision later when you provision a cluster. Any existing cluster using this RKE template can be upgraded to this new revision.
 
-== Disabling a Template Revision
+=== Disabling a Template Revision
 
 When you no longer want an RKE template revision to be used for creating new clusters, you can disable it. A disabled revision can be re-enabled.
 
@@ -87,7 +87,7 @@ You can disable the revision if it is not being used by any cluster.
 
 *Result:* The RKE template revision cannot be used to create a new cluster.
 
-== Re-enabling a Disabled Template Revision
+=== Re-enabling a Disabled Template Revision
 
 If you decide that a disabled RKE template revision should be used to create new clusters, you can re-enable it.
 
@@ -97,7 +97,7 @@ If you decide that a disabled RKE template revision should be used to create new
 
 *Result:* The RKE template revision can be used to create a new cluster.
 
-== Setting a Template Revision as Default
+=== Setting a Template Revision as Default
 
 When end users create a cluster using an RKE template, they can choose which revision to create the cluster with. You can configure which revision is used by default.
 
@@ -109,7 +109,7 @@ To set an RKE template revision as default,
 
 *Result:* The RKE template revision will be used as the default option when clusters are created with the template.
 
-== Deleting a Template Revision
+=== Deleting a Template Revision
 
 You can delete all revisions of a template except for the default revision.
 
@@ -121,7 +121,7 @@ To permanently delete a revision,
 
 *Result:* The RKE template revision is deleted.
 
-== Upgrading a Cluster to Use a New Template Revision
+=== Upgrading a Cluster to Use a New Template Revision
 
 [NOTE]
 ====
@@ -141,7 +141,7 @@ To upgrade a cluster to use a new template revision,
 
 *Result:* The cluster is upgraded to use the settings defined in the new template revision.
 
-== Exporting a Running Cluster to a New RKE Template and Revision
+=== Exporting a Running Cluster to a New RKE Template and Revision
 
 You can save an existing cluster's settings as an RKE template.
 
