Revert "Reverts so we can squash and merge "

--- a/versions/latest/modules/en/pages/cluster-deployment/about-rancher-agents.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/about-rancher-agents.adoc
@@ -7,15 +7,15 @@ There are two different agent resources deployed on Rancher managed clusters:
 
 For a conceptual overview of how the Rancher server provisions clusters and communicates with them, refer to the xref:about-rancher/architecture/architecture.adoc[architecture].
 
-=== cattle-cluster-agent
+== cattle-cluster-agent
 
 The `cattle-cluster-agent` is used to connect to the Kubernetes API of link:[Rancher Launched Kubernetes] clusters. The `cattle-cluster-agent` is deployed using a Deployment resource.
 
-=== cattle-node-agent
+== cattle-node-agent
 
 The `cattle-node-agent` is used to interact with nodes in a link:[Rancher Launched Kubernetes] cluster when performing cluster operations. Examples of cluster operations are upgrading Kubernetes version and creating/restoring etcd snapshots. The `cattle-node-agent` is deployed using a DaemonSet resource to make sure it runs on every node. The `cattle-node-agent` is used as fallback option to connect to the Kubernetes API of link:[Rancher Launched Kubernetes] clusters when `cattle-cluster-agent` is unavailable.
 
-=== Requests
+== Requests
 
 The `cattle-cluster-agent` pod does not define the default CPU and memory request values. As a baseline, we recommend setting the CPU request at `50m` and memory request at `100Mi`. However, it is important that you assess your use case appropriately and that you allocate the correct resources to your cluster for your needs.
 
@@ -72,7 +72,7 @@ spec:
 --
 ======
 
-=== Scheduling rules
+== Scheduling Rules
 
 The `cattle-cluster-agent` uses either a fixed set of tolerations, or dynamically-added tolerations based on taints applied to the control plane nodes. This structure allows https://kubernetes.io/docs/concepts/scheduling-eviction/taint-and-toleration/#taint-based-evictions[Taint based Evictions] to work properly for `cattle-cluster-agent`.
 
