--- a/versions/latest/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/quick-start/deploy-workloads/nodeports.adoc
@@ -1,10 +1,8 @@
 = Workload with NodePort Quick Start
 
-=== Prerequisite
+You must have a running cluster with at least 1 node.
 
-You have a running cluster with at least 1 node.
-
-=== 1. Deploying a Workload
+== 1. Deploying a Workload
 
 You're ready to create your first Kubernetes https://kubernetes.io/docs/concepts/workloads/[workload]. A workload is an object that includes pods along with other files and info needed to deploy your application.
 
@@ -34,11 +32,11 @@ image:container-port-field.png[Publish the container port, 80 entered]
 
 {blank} +
 
-=== 2. Viewing Your Application
+== 2. Viewing Your Application
 
 From the *Workloads* page, click the link underneath your workload. If your deployment succeeded, your application opens.
 
-=== Attention: Cloud-Hosted Sandboxes
+== Attention: Cloud-Hosted Sandboxes
 
 When using a cloud-hosted virtual machine, you may not have access to the port running the container. In this event, you can test Nginx in an ssh session on the local machine using `Execute Shell`. Use the port number after the `:` in the link under your workload if available, which is `31568` in this example.
 
@@ -97,10 +95,10 @@ gettingstarted@rancher:~$ curl http://localhost:31568
 gettingstarted@rancher:~$
 ----
 
-=== Finished
+== Finished
 
 Congratulations! You have successfully deployed a workload exposed via a NodePort.
 
-==== What's Next?
+=== What's Next?
 
 When you're done using your sandbox, destroy the Rancher Server and your cluster.
