--- a/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-rke1-kubernetes-cluster.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/infrastructure-setup/ha-rke1-kubernetes-cluster.adoc
@@ -18,19 +18,19 @@ To install the Rancher management server on a high-availability RKE cluster, we 
 
 These nodes must be in the same region/data center. You may place these servers in separate availability zones.
 
-=== Why three nodes?
+== Why Three Nodes?
 
 In an RKE cluster, Rancher server data is stored on etcd. This etcd database runs on all three nodes.
 
 The etcd database requires an odd number of nodes so that it can always elect a leader with a majority of the etcd cluster. If the etcd database cannot elect a leader, etcd can suffer from https://www.quora.com/What-is-split-brain-in-distributed-systems[split brain], requiring the cluster to be restored from backup. If one of the three etcd nodes fails, the two remaining nodes can elect a leader because they have the majority of the total number of etcd nodes.
 
-=== 1. Set up Linux Nodes
+== 1. Set up Linux Nodes
 
 Make sure that your nodes fulfill the general installation requirements for xref:installation-and-upgrade/requirements/requirements.adoc[OS, container runtime, hardware, and networking.]
 
 For an example of one way to set up Linux nodes, refer to this xref:installation-and-upgrade/infrastructure-setup/nodes-in-amazon-ec2.adoc[tutorial] for setting up nodes as instances in Amazon EC2.
 
-=== 2. Set up the Load Balancer
+== 2. Set up the Load Balancer
 
 You will also need to set up a load balancer to direct traffic to the Rancher replica on any of the three nodes. That will prevent an outage of any single node from taking down communications to the Rancher management server.
 
@@ -54,7 +54,7 @@ Do not use this load balancer (i.e, the `local` cluster Ingress) to load balance
 ====
 
 
-=== 3. Set up the DNS Record
+== 3. Set up the DNS Record
 
 Once you have set up your load balancer, you will need to create a DNS record to send traffic to this load balancer.
 
