Fix name of file ref'd by nav

--- a/versions/latest/modules/zh/pages/api/quickstart.adoc
+++ b/versions/latest/modules/zh/pages/api/quickstart.adoc
@@ -46,7 +46,7 @@
 
 == API kubectl 示例
 
-在此示例中，我们将展示如何使用 kubectl 创建一个项目，然后删除它。关于其他可用的 Rancher 资源列表，请参阅 link:./api-reference.adocx[API 参考]。
+在此示例中，我们将展示如何使用 kubectl 创建一个项目，然后删除它。关于其他可用的 Rancher 资源列表，请参阅 link:./reference.adoc[API 参考]。
 
 [NOTE]
 ====
