--- a/versions/v2.8/modules/en/pages/api/api-tokens.adoc
+++ b/versions/v2.8/modules/en/pages/api/api-tokens.adoc
@@ -1,6 +1,6 @@
 = Using API Tokens
 
-Rancher v2.8.0 introduced the link:./api-reference.adocx[Rancher Kubernetes API] which can be used to manage Rancher resources through `kubectl`. This page covers information on API tokens used with the xref:../rancher-admin/cli/rancher-cli.adoc[Rancher CLI], link:../cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc#about-the-kubeconfig-file[kubeconfig files], Terraform and the link:./v3-rancher-api-guide.adoc#enable-view-in-api[v3 API browser].
+Rancher v2.8.0 introduced the link:./reference.adoc[Rancher Kubernetes API] which can be used to manage Rancher resources through `kubectl`. This page covers information on API tokens used with the xref:../rancher-admin/cli/rancher-cli.adoc[Rancher CLI], link:../cluster-admin/manage-clusters/access-clusters/authorized-cluster-endpoint.adoc#about-the-kubeconfig-file[kubeconfig files], Terraform and the link:./v3-rancher-api-guide.adoc#enable-view-in-api[v3 API browser].
 
 By default, some cluster-level API tokens are generated with infinite time-to-live (`ttl=0`). In other words, API tokens with `ttl=0` never expire unless you invalidate them. Tokens are not invalidated by changing a password.
 
