Update partials - rename partials component - convert zh docs to use partials/add zh partials

--- a/versions/latest/modules/en/pages/cluster-admin/manage-clusters/manage-clusters.adoc
+++ b/versions/latest/modules/en/pages/cluster-admin/manage-clusters/manage-clusters.adoc
@@ -13,7 +13,7 @@ This section assumes a basic familiarity with Docker and Kubernetes. For a brief
 
 After clusters have been xref:cluster-deployment/cluster-deployment.adoc[provisioned into Rancher], xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#_cluster_roles[cluster owners] will need to manage these clusters. There are many different options of how to manage your cluster.
 
-import ClusterCapabilitiesTable from '../../../shared-files/_cluster-capabilities-table.md';+++<ClusterCapabilitiesTable>++++++</ClusterCapabilitiesTable>+++
+include::shared:ROOT:partial$en/cluster-capabilities-table.adoc[]
 
 == Configuring Tools
 
