--- a/versions/latest/modules/en/pages/cluster-deployment/configuration/rke1.adoc
+++ b/versions/latest/modules/en/pages/cluster-deployment/configuration/rke1.adoc
@@ -70,12 +70,13 @@ Out of the box, Rancher is compatible with the following network providers:
 * https://github.com/projectcalico/canal[Canal]
 * https://github.com/coreos/flannel#flannel[Flannel]
 * https://docs.projectcalico.org/v3.11/introduction/[Calico]
-* https://github.com/weaveworks/weave[Weave]+++<DeprecationWeave>++++++</DeprecationWeave>+++
+* https://github.com/weaveworks/weave[Weave]
+
+include::shared:ROOT:partial$en/deprecation-weave.adoc[]
 
 [NOTE]
 .Notes on Weave:
 ====
-
 When Weave is selected as network provider, Rancher will automatically enable encryption by generating a random password. If you want to specify the password manually, please see how to configure your cluster using a <<_rke_cluster_config_file_reference,Config File>> and the https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/#weave-network-plug-in-options[Weave Network Plug-in Options].
 ====
 
