--- a/versions/latest/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -22,7 +22,9 @@ Review the list of known issues for each Rancher version, which can be found in 
 
 === Helm Version
 
-The upgrade instructions assume you are using Helm 3.+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+The upgrade instructions assume you are using Helm 3.
+
+include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
 
 For migration of installs started with Helm 2, refer to the official https://helm.sh/blog/migrate-from-helm-v2-to-helm-v3/[Helm 2 to 3 migration docs.] The xref:[Helm 2 upgrade page here]provides a copy of the older upgrade instructions that used Helm 2, and it is intended to be used if upgrading to Helm 3 is not feasible.
 
