--- a/versions/latest/modules/zh/pages/cluster-deployment/cluster-deployment.adoc
+++ b/versions/latest/modules/zh/pages/cluster-deployment/cluster-deployment.adoc
@@ -11,7 +11,7 @@ Rancher 允许你通过 Rancher UI 来创建集群，从而简化了集群的创
 
 下表总结了每一种类型的集群和对应的可编辑的选项和设置：
 
-import ClusterCapabilitiesTable from '../../../shared-files/_cluster-capabilities-table.md';+++<ClusterCapabilitiesTable>++++++</ClusterCapabilitiesTable>+++
+include::shared:ROOT:partial$zh/cluster-capabilities-table.adoc[]
 
 == 在托管的 Kubernetes 提供商中设置集群
 
