--- a/versions/latest/modules/zh/pages/faq/container-network-interface-providers.adoc
+++ b/versions/latest/modules/zh/pages/faq/container-network-interface-providers.adoc
@@ -80,6 +80,8 @@ image:flannel-diagram.png[Flannel Diagram]
 
 ==== Weave
 
+include::shared:ROOT:partial$zh/deprecation-weave.adoc[]
+
 image:weave-logo.png[Weave Logo]
 
 Weave 在云上的 Kubernetes 集群中启用网络和网络策略。此外，它还支持加密对等节点之间的流量。
@@ -215,43 +217,7 @@ spec:
 
 == CNI 社区人气
 
-下表总结了不同的 GitHub 指标，让你了解每个项目的受欢迎程度和活动。数据收集于 2022 年 1 月。
-
-|===
-| 提供商 | 项目 | Stars | Forks | Contributors
-
-| Canal
-| https://github.com/projectcalico/canal
-| 679
-| 100
-| 21
-
-| Flannel
-| https://github.com/flannel-io/flannel
-| 7k
-| 2.5k
-| 185
-
-| Calico
-| https://github.com/projectcalico/calico
-| 3.1k
-| 741
-| 224
-
-| Weave
-| https://github.com/weaveworks/weave/
-| 6.2k
-| 635
-| 84
-
-| Cilium
-| https://github.com/cilium/cilium
-| 10.6k
-| 1.3k
-| 352
-|===
-
-{blank} +
+include::shared:ROOT:partial$zh/cni-popularity.adoc[]
 
 == 使用哪个 CNI 插件？
 
