--- a/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -351,7 +351,7 @@ image:port-communications.svg[基本端口要求]
 
 无论集群是什么类型，常用端口通常在你的 Kubernetes 节点上打开。
 
-import CommonPortsTable from '../../../shared-files/_common-ports-table.md';+++<CommonPortsTable>++++++</CommonPortsTable>+++
+include::shared:ROOT:partial$zh/common-ports-table.adoc[]
 
 '''
 
