--- a/versions/latest/modules/zh/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -158,7 +158,9 @@ helm template cert-manager ./cert-manager-v0.12.0.tgz --output-dir . \
 --set image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-controller
 --set webhook.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-webhook
 --set cainjector.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-cainjector
-----+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+----
++
+include::shared:ROOT:partial$zh/deprecation-helm2.adoc[]
 +
 Helm 2 命令如下：
 +
