--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -158,7 +158,9 @@ The Helm 3 command is as follows:
  --set image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-controller
  --set webhook.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-webhook
  --set cainjector.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-cainjector
-----+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+----
+
+include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
 +
 The Helm 2 command is as follows:
 +
