--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/upgrades.adoc
@@ -22,7 +22,9 @@ Review the list of known issues for each Rancher version, which can be found in 
 
 Note that upgrades _to_ or _from_ any chart in the link:../getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#helm-chart-repositories[rancher-alpha repository] aren't supported.
 
-=== Helm Version+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+=== Helm Version
+
+include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
 
 The upgrade instructions assume you are using Helm 3.
 
