--- a/shared/modules/ROOT/partials/zh/cni-popularity.adoc
+++ b/shared/modules/ROOT/partials/zh/cni-popularity.adoc
@@ -1,9 +1,9 @@
 // releaseTask
 
-The following table summarizes different GitHub metrics to give you an idea of each project's popularity and activity levels. This data was collected in August 2024.
+下表总结了不同的 GitHub 指标，让你了解每个项目的受欢迎程度和活动。数据收集于 2024 年 8 月。
 
 |===
-| Provider | Project | Stars | Forks | Contributors
+| 提供商 | 项目 | Stars | Forks | Contributors
 
 | Canal
 | https://github.com/projectcalico/canal
