--- a/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -348,7 +348,7 @@ The following table depicts the port requirements for xref:cluster-deployment/re
 
 These ports are typically opened on your Kubernetes nodes, regardless of what type of cluster it is.
 
-import CommonPortsTable from '../../../shared-files/_common-ports-table.md';+++<CommonPortsTable>++++++</CommonPortsTable>+++
+include::shared:ROOT:partial$en/common-ports-table.adoc[]
 
 '''
 
