--- a/versions/latest/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
+++ b/versions/latest/modules/en/pages/installation-and-upgrade/resources/upgrade-cert-manager.adoc
@@ -159,7 +159,7 @@ The Helm 3 command is as follows:
  --set cainjector.image.repository=<REGISTRY.YOURDOMAIN.COM:PORT>/quay.io/jetstack/cert-manager-cainjector
 ----
 +
-+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
 +
 The Helm 2 command is as follows:
 +
