--- a/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/manage-clusters.adoc
+++ b/versions/latest/modules/zh/pages/cluster-admin/manage-clusters/manage-clusters.adoc
@@ -13,7 +13,7 @@
 
 将集群xref:../../cluster-deployment/cluster-deployment.adoc[配置到 Rancher] 之后，link:../../rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc#集群角色[集群所有者]需要管理这些集群。管理集群的选项如下：
 
-import ClusterCapabilitiesTable from '../../../shared-files/_cluster-capabilities-table.md';+++<ClusterCapabilitiesTable>++++++</ClusterCapabilitiesTable>+++
+include::shared:ROOT:partial$zh/cluster-capabilities-table.adoc[]
 
 == 配置工具
 
