--- a/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/helm-version-requirements.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/requirements/helm-version-requirements.adoc
@@ -4,7 +4,9 @@
 
 ____
 我们已针对 Helm 3 更新了安装指南。如果你使用 Helm 2 进行安装，请参见 https://helm.sh/blog/migrate-from-helm-v2-to-helm-v3/[Helm 2 迁移到 Helm 3 文档]。xref:/versioned_docs/version-2.0-2.4/getting-started/installation-and-upgrade/advanced-options/advanced-use-cases/helm2/helm2.adoc[本文]提供了较早的使用 Helm 2 的 Rancher 高可用安装指南的副本。如果你如果无法升级到 Helm 3，可以使用这个说明安装。
-____+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+____
+
+include::shared:ROOT:partial$zh/deprecation-helm2.adoc[]
 
 * 如需安装或升级 Rancher 2.5，请使用 Helm 3.2.x 或更高版本。
 * Kubernetes 1.16 要求 Helm 2.16.0 或更高版本。如果使用的是默认 Kubernetes 版本，请参见https://github.com/rancher/rke/releases[发行说明]获取所使用的 RKE 版本。
