--- a/versions/latest/modules/zh/pages/installation-and-upgrade/upgrades.adoc
+++ b/versions/latest/modules/zh/pages/installation-and-upgrade/upgrades.adoc
@@ -24,7 +24,9 @@ kubeconfig 也可以通过 `--kubeconfig` 标签（详情请参见 https://helm.
 
 === Helm 版本
 
-本安装指南假定你使用的是 Helm 3。+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+本安装指南假定你使用的是 Helm 3。
+
+include::shared:ROOT:partial$zh/deprecation-helm2.adoc[]
 
 如果你使用 Helm 2，请参见 https://helm.sh/blog/migrate-from-helm-v2-to-helm-v3/[Helm 2 迁移到 Helm 3 文档]。如果你不能升级到 Helm 3，xref:/versioned_docs/version-2.0-2.4/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades/helm2.adoc[Helm 2 升级页面]提供了使用 Helm 2 升级的旧升级指南。
 
