--- a/versions/v2.8/modules/en/pages/about-rancher/overview.adoc
+++ b/versions/v2.8/modules/en/pages/about-rancher/overview.adoc
@@ -58,4 +58,4 @@ After a cluster is created with Rancher, a cluster administrator can manage clus
 
 The following table summarizes the options and settings available for each cluster type:
 
-import ClusterCapabilitiesTable from '../shared-files/_cluster-capabilities-table.md';+++<ClusterCapabilitiesTable>++++++</ClusterCapabilitiesTable>+++
+include::shared:ROOT:partial$en/cluster-capabilities-table.adoc[]
