--- a/versions/v2.8/modules/en/pages/faq/container-network-interface-providers.adoc
+++ b/versions/v2.8/modules/en/pages/faq/container-network-interface-providers.adoc
@@ -78,7 +78,9 @@ image:flannel-diagram.png[Flannel Diagram]
 
 For more information, see the https://github.com/flannel-io/flannel[Flannel GitHub Page].
 
-==== Weave+++<DeprecationWeave>++++++</DeprecationWeave>+++
+==== Weave
+
+include::shared:ROOT:partial$en/deprecation-weave.adoc[]
 
 image:weave-logo.png[Weave Logo]
 
@@ -213,7 +215,9 @@ The following table summarizes the different features available for each CNI net
 * Encryption: This feature allows cyphered and secure network control and data planes.
 * Ingress/Egress Policies: This feature allows you to manage routing control for both Kubernetes and non-Kubernetes communications.
 
-== CNI Community Popularity+++<CNIPopularityTable>++++++</CNIPopularityTable>+++
+== CNI Community Popularity
+
+include::shared:ROOT:partial$en/cni-popularity.adoc[]
 
 == Which CNI Provider Should I Use?
 
