--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -2,7 +2,9 @@
 
 Now that you have a running RKE cluster, you can install Rancher in it. For security reasons all traffic to Rancher must be encrypted with TLS. For this tutorial you are going to automatically issue a self-signed certificate through https://cert-manager.io/[cert-manager]. In a real-world use-case you will likely use Let's Encrypt or provide your own certificate.
 
-=== Install the Helm CLI+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+=== Install the Helm CLI
+
+include::shared:ROOT:partial$en/deprecation-helm2.adoc[]
 
 Install the https://helm.sh/docs/intro/install/[Helm] CLI on a host where you have a kubeconfig to access your Kubernetes cluster:
 
