--- a/versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
+++ b/versions/v2.8/modules/en/pages/installation-and-upgrade/requirements/port-requirements.adoc
@@ -351,7 +351,7 @@ The following table depicts the port requirements for xref:../../cluster-deploym
 
 These ports are typically opened on your Kubernetes nodes, regardless of what type of cluster it is.
 
-import CommonPortsTable from '../../../shared-files/_common-ports-table.md';+++<CommonPortsTable>++++++</CommonPortsTable>+++
+include::shared:ROOT:partial$en/common-ports-table.adoc[]
 
 '''
 
