--- a/versions/v2.8/modules/zh/pages/cluster-deployment/cluster-deployment.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/cluster-deployment.adoc
@@ -11,7 +11,7 @@ Rancher 简化了集群的创建，允许你通过 Rancher UI 而不是更复杂
 
 下表总结了每种集群类型的可用选项和设置：
 
-import ClusterCapabilitiesTable from '../../../shared-files/_cluster-capabilities-table.md';+++<ClusterCapabilitiesTable>++++++</ClusterCapabilitiesTable>+++
+include::shared:ROOT:partial$zh/cluster-capabilities-table.adoc[]
 
 == 在托管 Kubernetes 提供商中设置集群
 
