--- a/versions/v2.8/modules/zh/pages/cluster-deployment/configuration/rke1.adoc
+++ b/versions/v2.8/modules/zh/pages/cluster-deployment/configuration/rke1.adoc
@@ -72,10 +72,11 @@ Rancher 与以下开箱即用的网络提供商兼容：
 * https://docs.projectcalico.org/v3.11/introduction/[Calico]
 * https://github.com/weaveworks/weave[Weave]
 
+include::shared:ROOT:partial$zh/deprecation-weave.adoc[]
+
 [NOTE]
 .Weave 注意事项：
 ====
-
 选择 Weave 作为网络提供商时，Rancher 将通过生成随机密码来自动启用加密。如果你想手动指定密码，请参阅使用<<rke-集群配置文件参考,配置文件>>和 https://rancher.com/docs/rke/latest/en/config-options/add-ons/network-plugins/#weave-network-plug-in-options[Weave 网络插件选项]来配置集群。
 ====
 
