--- a/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
+++ b/versions/v2.8/modules/zh/pages/installation-and-upgrade/other-installation-methods/http-proxy/install-rancher.adoc
@@ -2,7 +2,9 @@
 
 在前文的操作后，你已经有了一个运行的 RKE 集群，现在可以在其中安装 Rancher 了。出于安全考虑，所有到 Rancher 的流量都必须使用 TLS 加密。在本教程中，你将使用 https://cert-manager.io/[cert-manager]自动颁发自签名证书。在实际使用情况下，你可使用 Let's Encrypt 或自己的证书。
 
-== 安装 Helm CLI+++<DeprecationHelm2>++++++</DeprecationHelm2>+++
+== 安装 Helm CLI
+
+include::shared:ROOT:partial$zh/deprecation-helm2.adoc[]
 
 在具有 kubeconfig 的主机上安装 https://helm.sh/docs/intro/install/[Helm] CLI 以访问 Kubernetes 集群：
 
